tests/security/ignorePathIfTrueOr/output.txt
ERROR: TaintedData - input.hack:9:14 - Data from a URL query string found its way to an HTML tag 